--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
   <!-- include the scripts needed for js9 -->
   <link type="image/x-icon" rel="shortcut icon" href="https://js9.si.edu/js9/favicon.ico">
-  <script type="text/javascript" src="js9prefs-sbo.js"></script>
   <link type="text/css" rel="stylesheet" href="https://js9.si.edu/js9/js9support.css">
   <link type="text/css" rel="stylesheet" href="https://js9.si.edu/js9/js9.css">
-  <script type="text/javascript" src="https://js9.si.edu/js9/js9prefs.js"></script>
+  <script type="text/javascript" src="js9prefs-sbo.js"></script>
+  <!-- <script type="text/javascript" src="https://js9.si.edu/js9/js9prefs.js"></script> -->
   <script type="text/javascript" src="https://js9.si.edu/js9/js9support.min.js"></script>
   <script type="text/javascript" src="https://js9.si.edu/js9/js9.min.js"></script>
   <script type="text/javascript" src="https://js9.si.edu/js9/js9plugins.js"></script>
-    <link type="text/css" rel="stylesheet" href="js9usermenus-sbo.css">
+  <link type="text/css" rel="stylesheet" href="js9usermenus-sbo.css">
   <script type="text/javascript" src="js9menu-sbo.js"></script>
 
   <style type="text/css">
@@ -40,9 +40,8 @@
     }
   </style>
   <title>ASTR1030 Astronomical Image Viewer</title>
-
-
 </head>
+
 <body>
     <table cellspacing="30" class='center'>
       <tr>
