Update for spring 2021.

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
       border-spacing: 0 0;
     }
   </style>
-  <title>ASTR1030 Astronomical Image Viewer</title>
+  <title>The CU Boulder Astronomical Image Viewer</title>
 </head>
 
 <body>
     <table cellspacing="30" class='center'>
       <tr>
        <td align="center" valign="bottom">
-         <h1 fontface='Montserrat'>ASTR1030 Astronomical Image Viewer</h1>
+         <h1 fontface='Montserrat'>The CU Boulder Astronomical Image Viewer</h1>
 
        </td>
       </tr>
@@ -64,8 +64,8 @@
         <td width=838px>
           <br><br>
           <a name="help"/>
-          <p><b>How do I connect for observing?</b> If you are an ASTR1030 student, visit the <a href=https://canvas.colorado.edu/courses/64272/pages/telescope-observing-at-sbo target='_blank'>Canvas Observing Page</a> for the zoom link.</p>
-          <p><b>How do I download my data?</b> If you are an ASTR1030 student, visit the <a href=https://drive.google.com/drive/folders/1c8fCI-N7p68jfvovlhgj50k5TRR4eouz?usp=sharing target='_blank'>ASTR1030 Data Archive</a> and browse to the correct directory for your telescope and observing night.</p>
+          <p><b>How do I connect for observing?</b> If you are a Spring 2021 ASTR1030 student, visit the <a href=https://canvas.colorado.edu/courses/70185/pages/telescope-observing-at-sbo target='_blank'>Canvas Observing Page</a> for the zoom link.</p>
+          <p><b>How do I download my data?</b> If you are a Spring 2021 ASTR1030 student, visit the <a href=https://drive.google.com/drive/folders/1bzwU_8aHYjigYF5QIcw2P5ocAZiXJToU?usp=sharing target='_blank'>ASTR1030 Data Archive</a> and browse to the correct directory for your telescope and observing night.</p>
           <p><b>How do I load an image?</b> Drag an image file (.fit, .fits, or any other image file format) from your computer into the main viewer window. Or, use the "File" button.</p>
           <p><b>How do I navigate around the image?</b> To change the zoom scale, use the "Zoom" button or press "+/-" on your keyboard. To recenter, either <i>control-click</i> (Mac) or <i>right-click</i> (Windows) with your mouse.</p>
           <p><b>How do I see fainter or brighter things?</b> Your image is a recording of "how much light hit this pixel," and you may someimes want to focus on specific ranges of brightness. <i>Click and drag</i> (up, down, left, right) on the image to change the mapping between recorded brightness and the color shown; watch the colorbar at the bottom to see how recorded brightness is being portrayed as color. Use the "Color Scale" button to switch between linear and logarithmic color. Use the ombré button to select a different set of colors to use entirely.</p>
